--- a/HTResearch/WebClient/WebClient/static/less/index/searchquery.less
+++ b/HTResearch/WebClient/WebClient/static/less/index/searchquery.less
@@ -9,7 +9,7 @@
 }
 
 #search-results-div-scroll {
-  overflow-y: auto;
+  overflow-y: scroll;
   height: 100%;
 }
 
@@ -27,7 +27,7 @@
 
 #search-results-div .panel-heading {
   line-height: 2;
-  width: 100%;
+  width: inherit;
 }
 
 #search-box {
@@ -40,6 +40,10 @@
     -webkit-border-bottom-left-radius: 5px;
     -moz-border-top-left-radius: 5px;
     -moz-border-bottom-left-radius: 5px;
+}
+
+.search-results-panel {
+  width: 306px;
 }
 
 .search-results-panel h2,
